crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters_2/rest-url-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "taskUid": "[taskUid]",
  "indexUid": "test",
  "status": "enqueued",
  "type": "settingsUpdate",
  "enqueuedAt": "[enqueuedAt]"
}
